<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_one"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        app:showAsAction="ifRoom|withText" />
    <!--  홈 이미지 변경  -->


    <item
        android:id="@+id/action_two"
        app:showAsAction="ifRoom|withText"
        android:enabled="true"
        android:icon="@drawable/schedule"
        android:title="@string/title_schedule" />
    <!--  시간표 이미지 변경  -->
    <item
        android:id="@+id/action_three"
        app:showAsAction="ifRoom|withText"
        android:enabled="true"
        android:icon="@drawable/calender"
        android:title="@string/title_calendar" />
    <!--  캘린더 이미지 변경  -->
    <item
        android:id="@+id/action_four"
        app:showAsAction="always|withText"
        android:enabled="true"
        android:icon="@drawable/notice"
        android:title="@string/title_notice" />
    <!--  공지사항 이미지 변경  -->
    <item
        android:id="@+id/action_five"
        app:showAsAction="always|withText"
        android:enabled="true"
        android:icon="@drawable/board"
        android:title="@string/title_board" />
    <!--  게시판 이미지 변경  -->
</menu>
