<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentTop="true"
            android:theme="@style/TestousToolbarDarkVer"
            app:elevation="0dp">

            <TextView
                android:id="@+id/toolbartext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/write_post"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/board_write_close_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:scaleX="0.3"
            android:scaleY="0.3"
            android:src="@drawable/close" />

        <Spinner
            android:id="@+id/board_spinner"
            android:layout_width="279dp"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="55dp" />

        <ImageButton
            android:id="@+id/board_write_finish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:scaleX="0.4"
            android:scaleY="0.4"
            android:src="@drawable/write" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/board_write_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/title" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/board_write_content_edit_text"
            android:layout_width="match_parent"
            android:layout_height="336dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:gravity="fill_horizontal"
            android:hint="@string/contents" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>